<resources>
    <string name="app_name">E-Contract</string>

    <string name="register_tittle">注册</string>
    <string name="register_userName">真实姓名</string>
    <string name="register_cardId">身份证号</string>
    <string name="register_pin">设置口令</string>
    <string name="register_request">申请注册</string>


    <string name="register_beforeRegister_hint">
        您的本次注册需要提供您的真实姓名与身份证号，待管理员对您的信息审核通过后，您将得到只属于您的用户ID，请务必记住！
        您设置的口令将用于保护保存在本设备的私钥，以后您在本台设备的登录都要输入它。
        点击【申请注册】按钮，提交注册信息并设置口令，即可获取您的用户ID。
    </string>
    <string name="register_waitForApprove_hint">
        您已成功提交注册申请!待管理员对您的信息审批通过后，您的账户才正式生效。
        现在系统发放给您唯一的用户ID【%1$s】，请务必记住它，以后您在任何移动设备的登录都要靠它！
        登录本设备时，您只要输入用户ID以及您刚刚设定的口令，即可完成登录。
    </string>
    <string name="register_fail_hint">
        您的本次提交注册因为某种原因没有成功，请重新填写信息再次尝试！
    </string>

    <string name="login_tittle">登录</string>
    <string name="login_hint">
        如果您是在本台设备注册的用户账号，或者已经在本台设备进行过登录，请选择口令登录。
        如果是在其他设备注册的用户账号，且是第一次登录本台设备，那么请选择二维码登录，让已登录的设备对本设备进行扫码验证。
    </string>
    <string name="login_userId">用户账号</string>
    <string name="login_pin">口令</string>

    <string name="qrcode_login_tittle">二维码登录</string>
    <string name="qrcode_login_userId">用户账号</string>
    <string name="qrcode_login_setfinished">完成</string>

    <string name="pincode_login_tittle">口令登录</string>
    <string name="pincode_login_userId">用户账号</string>
    <string name="pincode_login_pin">口令</string>

    <string name="failToLogin_tittle">登录失败</string>
    <string name="failToLogin_hint">
        登录失败！原因可能是您注册的账户尚未通过管理员的审批，也可能是您的用户ID或口令输入错误。
    </string>


    <string name="back">返回</string>
    <string name="forward">前进</string>
    <string name="renew">刷新</string>
    <string name="home">主页</string>
    <string name="menu">菜单</string>
    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="code_text">请输入生成二维码的文本信息</string>
    <string name="qrcodetext">这里显示扫描结果</string>

    <string name="confirm_login_text">是否对新设备授权,允许它拥有与本设备相同的权限</string>
    <string name="confirm_login">确认授权</string>
    <string name="cancel_confirm_login">取消</string>

    <string name="websign_text">点击确认将视为同意对网页内容进行签名,否则点击取消</string>
    <string name="confirm_websign_button">签名</string>
    <string name="cancal_websign_button">取消</string>

    <string name="qr_pin_beforeLogin_hint">
        现在设置一个口令完成新设备的绑定，以后您在本设备的登录都要用到它\n\n
        注意：该口令只可用于本设备的登录，同一用户的不同设备口令可能是不一样的，依用户设定而定！
    </string>

    <string name="userpage_scan_button_text">扫一扫</string>
</resources>