<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

<EditText
    android:id="@+id/pincode_login_usrId_editText"
    android:layout_width="@dimen/pincode_login_editText_width"
    android:layout_height="@dimen/pincode_login_editText_height"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/pincode_login_marginTop"
    android:hint="@string/pincode_login_userId" />

<EditText
    android:id="@+id/pincode_login_pin_editText"
    android:layout_width="@dimen/pincode_login_editText_width"
    android:layout_height="@dimen/pincode_login_editText_height"
    android:layout_gravity="center"
    android:hint="@string/pincode_login_pin" />

<Button
    android:id="@+id/pincode_login_button"
    android:layout_width="@dimen/pincode_login_button_width"
    android:layout_height="@dimen/pincode_login_button_height"
    android:layout_gravity="center"
    android:text="@string/pincode_login_tittle" />

</LinearLayout>