<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_hint_textView"
        android:layout_width="337dp"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/login_hint_marginTop"
        android:layout_marginBottom="@dimen/login_hint_marginBottom"
        android:text="@string/login_hint" />

    <Button
        android:id="@+id/qrcode_login_button"
        android:layout_width="@dimen/qrcode_login_button_width"
        android:layout_height="@dimen/qrcode_login_button_height"
        android:layout_gravity="center"
        android:text="@string/qrcode_login_tittle" />

    <Button
        android:id="@+id/pincode_login_button"
        android:layout_width="@dimen/pincode_login_button_width"
        android:layout_height="@dimen/pincode_login_button_height"
        android:layout_gravity="center"
        android:text="@string/pincode_login_tittle" />

</LinearLayout>