<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/qr_login_hint_textView"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/register_hint_marginTop"
        android:layout_marginBottom="@dimen/register_hint_marginBottom"
        android:layout_gravity="center"
        android:text="@string/qr_pin_beforeLogin_hint" />


    <EditText
        android:id="@+id/qr_pin_editText"
        android:layout_width="@dimen/register_editText_width"
        android:layout_height="@dimen/register_editText_height"
        android:layout_gravity="center"
        android:hint="@string/register_pin" />

    <Button
        android:id="@+id/qr_pin_login_button"
        android:layout_width="@dimen/register_button_width"
        android:layout_height="@dimen/register_button_height"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/register_request" />

</LinearLayout>
