<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="346dp">

        <TextView
            android:id="@+id/hello_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/main_text_marginTop"
            android:text="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.339" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="@dimen/main_button_width"
            android:layout_height="@dimen/main_button_height"
            android:layout_gravity="center"
            android:text="@string/register_tittle"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="361dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="@dimen/main_button_width"
            android:layout_height="@dimen/main_button_height"
            android:layout_gravity="center"
            android:text="@string/login_tittle"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="457dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>