<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/register_hint_textView"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/register_hint_marginTop"
        android:layout_gravity="center"
        android:text="@string/register_beforeRegister_hint" />

    <EditText
        android:id="@+id/register_usrName_editText"
        android:layout_width="@dimen/register_editText_width"
        android:layout_height="@dimen/register_editText_height"
        android:layout_gravity="center"
        android:hint="@string/register_userName" />

    <EditText
        android:id="@+id/register_cardId_editText"
        android:layout_width="@dimen/register_editText_width"
        android:layout_height="@dimen/register_editText_height"
        android:layout_gravity="center"
        android:hint="@string/register_cardId" />

    <RelativeLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_editText_height"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                style="@style/pin_style"
                android:id="@+id/login_pin_textView1" />

            <ImageView
                android:id="@+id/login_pin_line1"
                style="@style/vertical_line_style"/>

            <TextView
                style="@style/pin_style"
                android:id="@+id/login_pin_textView2" />

            <ImageView
                android:id="@+id/login_pin_line2"
                style="@style/vertical_line_style"/>

            <TextView
                style="@style/pin_style"
                android:id="@+id/login_pin_textView3" />

            <ImageView
                android:id="@+id/login_pin_line3"
                style="@style/vertical_line_style"/>

            <TextView
                style="@style/pin_style"
                android:id="@+id/login_pin_textView4" />

            <ImageView
                android:id="@+id/login_pin_line4"
                style="@style/vertical_line_style"/>

            <TextView
                style="@style/pin_style"
                android:id="@+id/login_pin_textView5" />

            <ImageView
                android:id="@+id/login_pin_line5"
                style="@style/vertical_line_style"/>

            <TextView
                style="@style/pin_style"
                android:id="@+id/login_pin_textView6" />

            <ImageView
                android:id="@+id/login_pin_line6"
                style="@style/vertical_line_style"/>

            <TextView
                style="@style/pin_style"
                android:id="@+id/login_pin_textView7" />

            <ImageView
                android:id="@+id/login_pin_line7"
                style="@style/vertical_line_style"/>

            <TextView
                style="@style/pin_style"
                android:id="@+id/login_pin_textView8" />

        </LinearLayout>

        <EditText
            android:id="@+id/login_pin_editText"
            android:layout_width="@dimen/login_editText_width"
            android:layout_height="@dimen/login_editText_height"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:textColor="#00000000"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/qr_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

    </RelativeLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="@dimen/register_button_width"
        android:layout_height="@dimen/register_button_height"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/register_button_marginBottom"
        android:text="@string/register_request" />

</LinearLayout>
